--- a/packages/flutter_distributor/pubspec.yaml
+++ b/packages/flutter_distributor/pubspec.yaml
@@ -28,6 +28,21 @@ dependencies:
   shell_uikit: ^0.1.1
   yaml: ^3.1.0
 
+dependency_overrides:
+  flutter_app_packager:
+    git:
+      url: https://github.com/arran4/flutter_distributor.git
+      path: packages/flutter_app_packager
+  flutter_app_publisher:
+    git:
+      url: https://github.com/arran4/flutter_distributor.git
+      path: packages/flutter_app_publisher
+  flutter_app_builder:
+    git:
+      url: https://github.com/arran4/flutter_distributor.git
+      path: packages/flutter_app_builder
+
+
 dev_dependencies:
   dependency_validator: ^3.0.0
   mostly_reasonable_lints: ^0.1.2
