--- a/packages/flutter_distributor/pubspec.yaml
+++ b/packages/flutter_distributor/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_distributor
 description: A complete tool for packaging and publishing your Flutter apps.
-version: 0.4.6
+version: 0.4.5
 homepage: https://distributor.leanflutter.dev
 repository: https://github.com/leanflutter/flutter_distributor/tree/main/packages/flutter_distributor
 issue_tracker: https://github.com/leanflutter/flutter_distributor/issues
@@ -18,17 +18,6 @@ dependencies:
   args: ^2.2.0
   charset: ^2.0.1
   dio: ^5.3.4
-  flutter_app_builder: ^0.4.6
-  flutter_app_packager: ^0.4.6
-  flutter_app_publisher: ^0.4.6
-  logging: ^1.0.2
-  path: ^1.8.1
-  pubspec_parse: ^1.1.0
-  shell_executor: ^0.1.6
-  shell_uikit: ^0.1.1
-  yaml: ^3.1.0
-
-dependency_overrides:
   flutter_app_packager:
     git:
       url: https://github.com/arran4/flutter_distributor.git
@@ -41,7 +30,20 @@ dependency_overrides:
     git:
       url: https://github.com/arran4/flutter_distributor.git
       path: packages/flutter_app_builder
+  logging: ^1.0.2
+  path: ^1.8.1
+  pubspec_parse: ^1.1.0
+  shell_executor: ^0.1.6
+  shell_uikit: ^0.1.1
+  yaml: ^3.1.0
 
+dependency_overrides:
+  flutter_app_packager:
+    path: ../flutter_app_packager
+  flutter_app_publisher:
+    path: ../flutter_app_publisher
+  flutter_app_builder:
+    path: ../flutter_app_builder
 
 dev_dependencies:
   dependency_validator: ^3.0.0
