--- a/packages/flutter_distributor/pubspec.yaml
+++ b/packages/flutter_distributor/pubspec.yaml
@@ -18,18 +18,9 @@ dependencies:
   args: ^2.2.0
   charset: ^2.0.1
   dio: ^5.3.4
-  flutter_app_packager:
-    git:
-      url: https://github.com/arran4/flutter_distributor.git
-      path: packages/flutter_app_packager
-  flutter_app_publisher:
-    git:
-      url: https://github.com/arran4/flutter_distributor.git
-      path: packages/flutter_app_publisher
-  flutter_app_builder:
-    git:
-      url: https://github.com/arran4/flutter_distributor.git
-      path: packages/flutter_app_builder
+  flutter_app_packager: ^0.4.5
+  flutter_app_publisher: ^0.4.5
+  flutter_app_builder: ^0.4.5
   logging: ^1.0.2
   path: ^1.8.1
   pubspec_parse: ^1.1.0
